# atomic

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: agent_json.rs  cli.rs  config.rs  credentials.rs  db.rs  deposit.rs  init.rs  magic_link.rs  main.rs  server.rs  sign.rs  tls.rs  vault.rs
src/crypto/: mod.rs  signing.rs  token.rs  vault.rs
www/: _headers  index.html  install  robots.txt  sitemap.xml  style.css
