[package]
name = "atomic"
version = "0.1.0"
edition = "2021"
description = "Identity for AI agents"
license = "MIT"
repository = "https://github.com/ploton/atomic"

[[bin]]
name = "atomic"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "signal", "macros", "io-util", "process"] }

# HTTP server
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto - Ed25519
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Crypto - AES-256-GCM
aes-gcm = { version = "0.10", features = ["zeroize"] }

# Key derivation
hkdf = "0.12"
sha2 = "0.10"

# Random + encoding
rand = "0.8"
base64 = "0.22"
hex = "0.4"

# HTTP client (for verify command)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Storage
rusqlite = { version = "0.34", features = ["bundled"] }

# Misc
bytes = "1"
dirs = "6"
zeroize = { version = "1.8.2", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
